<resources>
    <string name="app_name">Camera Restarter</string>
    <string name="help_title">READ BELOW BEFORE USING!!! Scroll down for instructions/details</string>
    <string name="restart_camera">Restart camera</string>
    <string name="camera_restared_successfully">Camera restarted successfully!</string>
    <string name="camera_restart_failed">Camera restart failed: %s</string>
    <string name="ok">OK</string>
    <string name="help_message">"USE AT YOUR OWN RISKS!!! This app requires your phone to be rooted, otherwise it will not work. If you don't know what a rooted phone is, ask Google :-)\n\nThis app is meant for people encountering the error message \"can't connect to camera\". Usually when getting this error message, the only solution for using the camera again is to restart the phone.\n\nThis app allows to restart the camera individually without needing to restart the phone.\n\nThis app uses root permission to kill the process named 'media' ('/system/bin/mediaserver').\n\nI published this app with the hope that it would be helpful, however I do not know what the consequences of killing the 'media' process are, I just know that it solved my problem.\n\nUSE AT YOUR OWN RISK!!!\n\nHOW TO USE THE APP:\nThe 'auto launch camera' check box is an app wide preference: if it is checked, upon restarting the camera, the default camera app will be launched.\nThe 'RESTART CAMERA' button will perform the action of restarting the camera.\nThe app's widget does the same action as the 'RESTART CAMERA' button, without the need of starting the app.\nThe best way to use this app is to use the widget: a simple click on the widget and your camera is restarted with the default camera app started!\n\nIF YOU WANT THIS APP WITHOUT ADS:\nIf you use the widget you will never see ads, but if you really want the app without ads, the source code is available publicly (see the app's Play Store page) so you're free to build an ad-free version for yourself."</string>
    <string name="auto_launch_camera">Auto launch camera</string>
    <string name="auto_restart_camera_action">Auto restart camera action</string>
    <string name="auto_restart_camera_action_disabled_toast">\"Auto restart camera action\" is disabled, opening app settings instead.</string>
    <string name="camera_restarter_launcher">Camera Restarter launcher</string>
    <string name="camera_restarter_settings">Camera Restarter settings</string>
    <string name="open_clickable_notification">Open clickable notification</string>
    <string name="close_clickable_notification">Close clickable notification</string>
    <string name="open_notification_on_system_start">Open notification on system start</string>
    <string name="click_to_restart_camera">Restart camera</string>
    <string name="click_to_restart_camera_last_restart_at">Restart camera (last at %s)</string>
</resources>